--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "SET PORT=4001 && next dev --turbo",
+    "dev": "SET PORT=4001 && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,9 +15,12 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
+    "framer-motion": "^8.0.2",
     "next": "13.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "swiper": "^8.4.5",
     "typescript": "4.9.4"
   }
 }
