--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint-config-next": "13.1.0",
     "framer-motion": "^8.0.2",
     "next": "13.1.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "swiper": "^8.4.5",
